@@ -46,9 +46,21 @@ Several application programs are also provided:
   - an image viewer
 
 @section news News
+
+In release 3 of JasPer, the following notable changes were made to the API
+and/or behavior of the library relative to earlier releases:
+
+  - the jas_init function no longer registers jas_cleanup as an atexit
+    handler;
+    so, the library user is now responsible for invoking jas_cleanup at
+    an appropriate time;
+    this change was needed in order to better support the use of the library
+    on some platforms
+
 @verbinclude @CMAKE_SOURCE_DIR@/NEWS
 
 @section license License
+
 @verbinclude @CMAKE_SOURCE_DIR@/LICENSE
 
 @section bugs Reporting Bugs
